--- a/NorthwindTradersSpringBoot/NorthwindTradersSpringBoot/src/main/resources/application.properties
+++ b/NorthwindTradersSpringBoot/NorthwindTradersSpringBoot/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=NorthwindTradersSpringBoot
+spring.datasource.url=jdbc:mysql://localhost:3306/northwind
+spring.datasource.username=root
+spring.datasource.password=yearup
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
